--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,34 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+button {
+  margin: 10px;
+}
+
+.cell {
+  width: 20px;
+  height: 20px;
+  margin: 1px;
+  display: inline-block;
+}
+
+.active {
+  background: black;
+}
+
+.inactive {
+  background: white;
+}
+
+.row {
+  display: inline-flex;
+  margin: -3px;
+}
+
+.board {
+  background: rgb(230, 230, 230);
+  display: table-caption;
 }
